Specified a fix legend builder entry height, to prevent colors from being cropped.

--- a/modules/gui/frontend/src/app/home/map/legendBuilder.module.css
+++ b/modules/gui/frontend/src/app/home/map/legendBuilder.module.css
@@ -1,5 +1,6 @@
 .entry {
     flex-shrink: 1;
+    height: 1.9rem;
 }
 
 .colorContainer {
